all searches paginated n local storage saving

--- a/views/searchPageAustin.ejs
+++ b/views/searchPageAustin.ejs
@@ -10,6 +10,7 @@
        <link rel='stylesheet' href='/stylesheets/style.css' />
      <link rel="stylesheet" href="https://bootswatch.com/superhero/bootstrap.min.css">
      <script src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js'></script>
+     <script src='/javascripts/pagination.js'></script>
    
 
   </head>
@@ -186,7 +187,7 @@
           <label for"bedsmin">Beds</label><br>
           <select id="bedsmin" name="bedsmin">
               <option value="0">Any</option>
-              <option value="1">1</option>
+              <option value="1">1+</option>
               <option value="2">2+</option>
               <option value="3">3+</option>
               <option value="4">4+</option>
@@ -198,7 +199,7 @@
           <label for"bathsmin">Baths</label><br>
           <select id="bathsmin" name="bathsmin">
               <option value="0">Any</option>
-              <option value="1">1</option>
+              <option value="1">1+</option>
               <option value="2">2+</option>
               <option value="3">3+</option>
               <option value="4">4+</option>
@@ -260,16 +261,16 @@
     </div>
     <div class="row">
         <div class="col-md-2 col-md-offset-4 col-sm-2 col-sm-offset-4 col-xs-6 col-xs-offset-0 stories">
-        <label for"stories">Stories</label><br>
-          <select id="stories" name="stories">
+        <label for"storiesAustin">Stories</label><br>
+          <select id="storiesAustin" name="stories">
               <option value="1,2,3,4">Any</option>
               <option value="1">1</option>  
               <option value="2">2</option>
           </select>
         </div>
         <div class="col-md-2 col-sm-2 col-sm-2 col-xs-6 garages">
-          <label for"garages">Garages</label><br>
-          <select id="garages" name="garages">
+          <label for"garagesAustin">Garages</label><br>
+          <select id="garagesAustin" name="garages">
               <option value="1">Any</option>
               <option value="2">2+</option>
               <option value="3">3+</option>
@@ -318,6 +319,7 @@
 
  <script src='/javascripts/javascript.js'></script> 
  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+  <script>$('[data-toggle="popover"]').popover({html: true});</script> 
    <!-- SLICK SLIDER SCRIPT -->
    <script src='/javascripts/slickSlider.js'></script>
  <script type="text/javascript" src="https://cdn.jsdelivr.net/jquery.slick/1.5.7/slick.min.js"></script>
