--- a/views/searchPageCS.ejs
+++ b/views/searchPageCS.ejs
@@ -255,15 +255,15 @@
     </div>
     <div class="row">
         <div class="col-md-2 col-md-offset-4 col-sm-2 col-sm-offset-4 col-xs-6 col-xs-offset-0 stories">
-        <label for"stories">Stories</label><br>
-          <select id="stories" name="stories">
+        <label for"storiesCS">Stories</label><br>
+          <select id="storiesCS" name="stories">
               <option value="1STORY,2andHalfSTORY,2STORYoMore,OTHER,SPLITLVL">Any</option>
               <option value="1STORY">1</option>
           </select>
         </div>
         <div class="col-md-2 col-sm-2 col-sm-2 col-xs-6 garages">
-          <label for"garages">Garages</label><br>
-          <select id="garages" name="garages">
+          <label for"garagesCS">Garages</label><br>
+          <select id="garagesCS" name="garages">
               <option value="NONE,1,2,3PLUS">Any</option>
               <option value="2,3PLUS">2+</option>
               <option value="3PLUS">3+</option>
@@ -314,6 +314,7 @@
 
    <script src='/javascripts/javascript.js'></script>
    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+    <script>$('[data-toggle="popover"]').popover({html: true});</script> 
    <!-- SLICK SLIDER SCRIPT -->
    <script src='/javascripts/slickSlider.js'></script>
    <script type="text/javascript" src="https://cdn.jsdelivr.net/jquery.slick/1.5.7/slick.min.js"></script>
