--- a/views/orlandoFavs.ejs
+++ b/views/orlandoFavs.ejs
@@ -78,6 +78,7 @@
 
   <script src='/javascripts/javascript.js'></script> 
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+   <script>$('[data-toggle="popover"]').popover({html: true});</script> 
   <!-- SLICK SLIDER SCRIPT -->
   <script src='/javascripts/slickSlider.js'></script>
   <script type="text/javascript" src="https://cdn.jsdelivr.net/jquery.slick/1.5.7/slick.min.js"></script> 
