--- a/views/searchPageNashville.ejs
+++ b/views/searchPageNashville.ejs
@@ -180,7 +180,7 @@
           <label for"bathsmin">Baths</label><br>
           <select id="bathsmin" name="bathsmin">
               <option value="0">Any</option>
-              <option value="1">1</option>
+              <option value="1">1+</option>
               <option value="2">2+</option>
               <option value="3">3+</option>
               <option value="4">4+</option>
@@ -242,16 +242,16 @@
     </div>
     <div class="row">
         <div class="col-md-2 col-md-offset-4 col-sm-2 col-sm-offset-4 col-xs-6 col-xs-offset-0 stories">
-        <label for"stories">Stories</label><br>
-          <select id="stories" name="stories">
+        <label for"storiesNashville">Stories</label><br>
+          <select id="storiesNashville" name="stories">
               <option value="1.00,1.50,2.00,3.00,1.25">Any</option>
               <option value="1.00">1</option> 
               <option value='2.00,3.00'>2+</option> 
           </select>
         </div>
         <div class="col-md-2 col-sm-2 col-sm-2 col-xs-6 garages">
-          <label for"garages">Garages</label><br>
-          <select id="garages" name="garages">
+          <label for"garagesNashville">Garages</label><br>
+          <select id="garagesNashville" name="garages">
               <option value="0">Any</option>
               <option value="2">2+</option>
               <option value="3">3+</option>
@@ -298,6 +298,7 @@
 
  <script src='/javascripts/javascript.js'></script> 
  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+  <script>$('[data-toggle="popover"]').popover({html: true});</script> 
    <!-- SLICK SLIDER SCRIPT -->
    <script src='/javascripts/slickSlider.js'></script>
  <script type="text/javascript" src="https://cdn.jsdelivr.net/jquery.slick/1.5.7/slick.min.js"></script>
