--- a/views/searchPageOrlando.ejs
+++ b/views/searchPageOrlando.ejs
@@ -308,15 +308,15 @@
     </div>
     <div class="row">
         <div class="col-md-2 col-md-offset-4 col-sm-2 col-sm-offset-4 col-xs-6 col-xs-offset-0 stories">
-        <label for"stories">Stories</label><br>
-          <select id="stories" name="stories">
+        <label for"storiesOrlando">Stories</label><br>
+          <select id="storiesOrlando" name="stories">
               <option value="200">Any</option>
               <option value="1">1</option>  
           </select>
         </div>
         <div class="col-md-2 col-sm-2 col-sm-2 col-xs-6 garages">
-          <label for"garages">Garages</label><br>
-          <select id="garages" name="garages">
+          <label for"garagesOrlando">Garages</label><br>
+          <select id="garagesOrlando" name="garages">
               <option value="1CarGarage,2CarGarage,3CarGarage,4CarGarage,5PlusCarGarage,None,1CarCarport,2CarCarport,3CarCarport">Any</option>
               <option value="2CarGarage,3CarGarage,4CarGarage,5PlusCarGarage">2+</option>
               <option value="3CarGarage,4CarGarage,5PlusCarGarage">3+</option>
@@ -364,6 +364,7 @@
 
  <script src='/javascripts/javascript.js'></script>
  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+  <script>$('[data-toggle="popover"]').popover({html: true});</script> 
  <!-- SLICK SLIDER SCRIPT -->
  <script src='/javascripts/slickSlider.js'></script>
  <script type="text/javascript" src="https://cdn.jsdelivr.net/jquery.slick/1.5.7/slick.min.js"></script>
