--- a/views/searchPageQC.ejs
+++ b/views/searchPageQC.ejs
@@ -237,8 +237,8 @@
           </select> -->
         </div>
         <div class="col-md-2 col-sm-2 col-sm-2 col-xs-6 garages">
-          <label for"garages">Garages</label><br>
-          <select id="garages" name="garages">
+          <label for"garagesQC">Garages</label><br>
+          <select id="garagesQC" name="garages">
               <option value="0">Any</option>
               <option value="2">2+</option>
               <option value="3">3+</option>
@@ -289,6 +289,7 @@
 
   <script src='/javascripts/javascript.js'></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+   <script>$('[data-toggle="popover"]').popover({html: true});</script> 
   <!-- SLICK SLIDER SCRIPT -->
   <script src='/javascripts/slickSlider.js'></script>
   <script type="text/javascript" src="https://cdn.jsdelivr.net/jquery.slick/1.5.7/slick.min.js"></script> 
