--- a/views/searchResultsCS.ejs
+++ b/views/searchResultsCS.ejs
@@ -7,6 +7,7 @@
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/jquery.slick/1.5.7/slick.css"/>
     <link rel="stylesheet" href="https://bootswatch.com/superhero/bootstrap.min.css">
      <script src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js'></script>
+     <script src='/javascripts/pagination.js'></script>
 
 
     <title>COLLEGE STATION</title>
@@ -42,7 +43,7 @@
   </div><!-- /.container-fluid -->
 </nav>
     
-    <div id="phoneFloatSearchPage"><span class='numResults'></span>
+    <div id="phoneFloatSearchPage"><span class='numResults'><%= totalRecords.length %> homes matching your search!</span>
 <div id="container">
           <% listings.forEach(function(listing) { %>
           <div class="col-lg-3 col-md-4 col-sm-6 well HOME">
@@ -72,6 +73,17 @@
 </div>
 </div>
 
+  <div id="pager" class="text-center"></div>
+        <ul class="pagination col-md-12">
+          <li><a href='/searchResultsCS/<%= 1 %>'>First Page</a></li>
+          <% for (var i = 1; i < totalRecords.length / size; i++) { %> 
+          <li class='pageNumber'><a href="/searchResultsCS/<%= i %>"><%= i %></a></li>
+        <% } %>
+          <li><a href='/searchResultsCS/<%= Math.floor(totalRecords.length / size) + 1 %>'>Last Page</a></li>
+        </ul>
+      </div>
+</div> 
+
   <div class='col-md-12 col-xs-12'>
       <small>Listing information © 2015 Bryan-College Station Regional Multiple Listing Service. IDX information is provided exclusively for consumers' personal, non-commercial use and may not be used for any purpose other than to identify prospective properties consumers may be interested in purchasing. Data is deemed reliable but is not guaranteed accurate</small>
     </div>
@@ -79,6 +91,7 @@
     
  <script src='/javascripts/javascript.js'></script>
  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+  <script>$('[data-toggle="popover"]').popover({html: true});</script> 
  <!-- SLICK SLIDER SCRIPT -->
  <script src='/javascripts/slickSlider.js'></script>
  <script type="text/javascript" src="https://cdn.jsdelivr.net/jquery.slick/1.5.7/slick.min.js"></script>
