--- a/views/searchResultsCityChicago.ejs
+++ b/views/searchResultsCityChicago.ejs
@@ -72,11 +72,11 @@
 
   <div id="pager" class="text-center"></div>
         <ul class="pagination col-md-12">
-          <li><a href='/searchResultsChicago/<%= 1 %>'>First Page</a></li>
+          <li><a href='/searchResultsCityChicago/<%= 1 %>'>First Page</a></li>
           <% for (var i = 1; i < totalRecords.length / size; i++) { %> 
-          <li class='pageNumber'><a href="/searchResultsChicago/<%= i %>"><%= i %></a></li>
+          <li class='pageNumber'><a href="/searchResultsCityChicago/<%= i %>"><%= i %></a></li>
         <% } %>
-          <li><a href='/searchResultsChicago/<%= Math.floor(totalRecords.length / size) + 1 %>'>Last Page</a></li>
+          <li><a href='/searchResultsCityChicago/<%= Math.floor(totalRecords.length / size) + 1 %>'>Last Page</a></li>
         </ul>
       </div>
 </div> 
