--- a/views/searchResultsCityOrlando.ejs
+++ b/views/searchResultsCityOrlando.ejs
@@ -72,11 +72,11 @@
 
   <div id="pager" class="text-center"></div>
         <ul class="pagination col-md-12">
-          <li><a href='/searchResultsOrlando/<%= 1 %>'>First Page</a></li>
+          <li><a href='/searchResultsCityOrlando/<%= 1 %>'>First Page</a></li>
           <% for (var i = 1; i < totalRecords.length / size; i++) { %> 
-          <li class='pageNumber'><a href="/searchResultsOrlando/<%= i %>"><%= i %></a></li>
+          <li class='pageNumber'><a href="/searchResultsCityOrlando/<%= i %>"><%= i %></a></li>
         <% } %>
-          <li><a href='/searchResultsOrlando/<%= Math.floor(totalRecords.length / size) + 1 %>'>Last Page</a></li>
+          <li><a href='/searchResultsCityOrlando/<%= Math.floor(totalRecords.length / size) + 1 %>'>Last Page</a></li>
         </ul>
       </div>
 </div> 
