--- a/views/searchResultsNashville.ejs
+++ b/views/searchResultsNashville.ejs
@@ -7,6 +7,7 @@
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/jquery.slick/1.5.7/slick.css"/>
     <link rel="stylesheet" href="https://bootswatch.com/superhero/bootstrap.min.css">
      <script src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js'></script>
+     <script src='/javascripts/pagination.js'></script>
     
     <title>NASHVILLE</title>
   </head>
@@ -41,7 +42,7 @@
   </div><!-- /.container-fluid -->
 </nav>
     
-    <div id="phoneFloatSearchPage"><span class='numResults'></span>
+    <div id="phoneFloatSearchPage"><span class='numResults'><%= totalRecords.length %> homes matching your search!</span>
 <div id="container">
           <% listings.forEach(function(listing) { %>
           <div class="col-lg-3 col-md-4 col-sm-6 well HOME">
@@ -67,6 +68,17 @@
 </div>
 </div>
 
+  <div id="pager" class="text-center"></div>
+        <ul class="pagination col-md-12">
+          <li><a href='/searchResultsNashville/<%= 1 %>'>First Page</a></li>
+          <% for (var i = 1; i < totalRecords.length / size; i++) { %> 
+          <li class='pageNumber'><a href="/searchResultsNashville/<%= i %>"><%= i %></a></li>
+        <% } %>
+          <li><a href='/searchResultsNashville/<%= Math.floor(totalRecords.length / size) + 1 %>'>Last Page</a></li>
+        </ul>
+      </div>
+</div> 
+
   <div class='col-md-12 col-xs-12'>
          <small>All information is believed to be accurate but not guaranteed and should be independently verified. All properties are subject to prior sale, change or withdrawal. Copyright 2015 RealTracs Solutions.</small>
       </div>
@@ -75,6 +87,7 @@
 
  <script src='/javascripts/javascript.js'></script> 
  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+  <script>$('[data-toggle="popover"]').popover({html: true});</script> 
  <!-- SLICK SLIDER SCRIPT -->
  <script src='/javascripts/slickSlider.js'></script>
  <script type="text/javascript" src="https://cdn.jsdelivr.net/jquery.slick/1.5.7/slick.min.js"></script>
