--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -46,7 +46,7 @@
         <label for'confirmPassword' class='form-group'>Confirm Password</label>
         <input type='text' id='confirmPassword' name='confirmPassword' class='form-control btn-info'>
         <p class='form-group'></p>
-        <div><input type='submit' value="Submit">&nbsp;</div>
+        <div><input type='submit' value="Submit">&nbsp;<button><a href='/signin'>Already Registered?</a></button></div>
       </form>
  <!--        <a href='auth/facebook'><p>Login with Facebook</p></a>
           <a href="/auth/google"><p>Sign In with Google</p></a> -->
