--- a/views/searchResultsQC.ejs
+++ b/views/searchResultsQC.ejs
@@ -49,11 +49,11 @@
           <div class="col-lg-3 col-md-4 col-sm-6 well HOME">
       <div class="statusButtons"><button id="new" disabled="true">MLS Listed</button><button id="new2" disabled="true"><% if (listing.status == '1_0') { %> Active <%}  %><% if (listing.status == '1_1') { %> Active <%}  %><% if (listing.status == '1_2') { %> Contingent <%}  %><% if (listing.status == '1_3') { %> New <%}  %><% if (listing.status == '1_4') { %> Reduced <%}  %></button><% if (listing.DOM <= 2) { %><button id="new" disabled="true">New!</button> <% } %></div>
       
-       <div class="listingImage rtl">
+      <!-- <div class="listingImage rtl">
           <% for (var i = 1; i <= listing.photoCount; i++) { %>
         <a href="/quadCities/<%= listing.MLS %>"><img class="image" src="/images/QCImages/LargePhoto<%= listing.MLS %>-<%= i %>.jpeg" height="200px" width="250px"></a>
         <% } %>
-    </div>
+    </div> -->
       
       <div class="listingBasics" class="text-center"><div><strong><span class="price"><%= listing.price %></span></strong>&nbsp;&nbsp;&nbsp;&nbsp;<%= listing.DOM %> Days on Market</div>
       <div><%= listing.beds %> Bed, <%= listing.baths %> Bath, <%= listing.sqft %> Sq.Ft.</div>
