--- a/public/stylesheets/slickSlider2.css
+++ b/public/stylesheets/slickSlider2.css
@@ -1,14 +1,20 @@
 @charset "UTF-8";
 
 
+
+
 .rtl {
-  width: 250px;
+  width: 100%;
+  max-width: 1100px;
+  margin-left: 10px;
 }
 
 .slick-slide{
-height: 170px;
+min-height: 400px;
+max-height: 400px;
 margin: 0;
 }
+
 
 /* Slider */
 .slick-slider {
@@ -220,3 +226,12 @@ margin: 0;
     .slick-dots li.slick-active button:before {
       color: #ffa414;
       opacity: 0.75; }
+
+
+@media screen and (max-width: 400px) {
+  .rtl {
+  width: 95%;
+  margin-left: 10px;
+  }
+}
+
